Remove arrows when at least one day is selected

--- a/alpha/home/static/styles/when.css
+++ b/alpha/home/static/styles/when.css
@@ -220,3 +220,8 @@
 	position:relative;
 	top:-3px;
 }
+
+.hidden-arrows .ui-datepicker .ui-datepicker-prev, .hidden-arrows .ui-datepicker .ui-datepicker-next {
+	display:none;
+
+}
