--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -21,7 +21,8 @@
 <link href="{{STATIC_URL}}ajaxuploader/css/fileuploader.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" rel="stylesheet" type="text/css" />
 <link href="{{STATIC_URL}}css/crop.css" rel="stylesheet" type="text/css" />
-{% include_jquery_libs %}
+<link rel="stylesheet" href="{{STATIC_URL}}fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+
 <script src="{{STATIC_URL}}js/create_event.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/jquery.dj.selectable.js" type="text/javascript"></script>
@@ -33,6 +34,7 @@
 <script src="{{STATIC_URL}}js/description.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/tags.popup.js" type="text/javascript"></script>
 <script src="{{STATIC_URL}}js/suggest.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{STATIC_URL}}fancybox/jquery.fancybox.js"></script>
 <!-- end time -->
 {{ form.map }}
 {{ form.media.js }}
@@ -51,14 +53,14 @@
     }  
 
 
-    $(document).ready(function(e) {
-        $('.search-lists ul li a').click(function(){
-            var v = $(this).attr('rel');
-            $('.location-text-box .location').val(v);
+    jQuery(document).ready(function(e) {
+        jQuery('.search-lists ul li a').click(function(){
+            var v = jQuery(this).attr('rel');
+            jQuery('.location-text-box .location').val(v);
         });
-        $('.footer-site-map ul li').addClass('add-border-right-white');
-        $('.footer-site-map ul li:last').removeClass('add-border-right-white');
-        //$('.right-navigation-wrapper').height($('.main-navigation-content-nav').height());
+        jQuery('.footer-site-map ul li').addClass('add-border-right-white');
+        jQuery('.footer-site-map ul li:last').removeClass('add-border-right-white');
+        //jQuery('.right-navigation-wrapper').height(jQuery('.main-navigation-content-nav').height());
         function newParameters(query) {
             query.foo = 'bar';
         }
@@ -187,7 +189,7 @@
                                             <td>
                                                 <div class="location">{{ form.place}}</div>
                                                 <div class="choose_location"></div>
-                                                <div class="suggest modal">
+                                                <div class="suggest">
                                                     <div class="error">
                                                         All fields is required
                                                     </div>
@@ -386,7 +388,7 @@
                                             <td>Images</td>
                                             <td>
                                                 {{ form.picture }}
-                                                <div class='full-screen-popup modal' data-thumb-width="180" data-thumb-height="180">
+                                                <div class='full-screen-popup' data-thumb-width="180" data-thumb-height="180">
                                                     {{ form.cropping }}
                                                     <div class='save-button'>Save image</div>
                                                 </div>
