--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -385,7 +385,7 @@
                                             </td>
                                         </tr>                                        
                                         <tr class="picture">
-                                            <td>Images</td>
+                                            <td>Image</td>
                                             <td>
                                                 {{ form.picture }}
                                                 <div class='full-screen-popup' data-thumb-width="180" data-thumb-height="180">
