--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -280,13 +280,10 @@
                                                 Description
                                                 <br>
                                                 <div class="description-select-day-widget">
-                                                    <div class="toggle">
-                                                        <span>Optional</span>
-                                                    </div>
-                                                    <div class="description-days-container">
+                                                    <div class="description-days-container active">
                                                         <span class="result">Same for All Days</span>
                                                         <div class="selected-result">Same for All</div>
-                                                        <ul class="days-list active"></ul>
+                                                        <ul class="days-list"></ul>
                                                     </div>
                                                 </div>
                                             </td>
