--- a/alpha/event/static/css/crop.css
+++ b/alpha/event/static/css/crop.css
@@ -83,6 +83,11 @@
     margin-left:10px;
     margin-top:10px;
     cursor: pointer;
+    display:none;
+}
+
+.picture-thumb.result{
+    display:block;
 }
 
 .wheelchair-td ul {
