--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -393,7 +393,7 @@
                                         <tr class="picture">
                                             <td>Image</td>
                                             <td>
-                                                {{ form.picture }}
+                                                {{ form.picture_src }}
                                                 <div class='full-screen-popup' data-thumb-width="180" data-thumb-height="180">
                                                     {{ form.cropping }}
                                                     <div class='save-button'>Save image</div>
