--- a/alpha/event/static/styles/when.css
+++ b/alpha/event/static/styles/when.css
@@ -187,6 +187,7 @@
     border-radius: 8px;
     text-align: center;
     COLOR: #000;
+    font-size: 0.9em;
 }
 
 .my-time-picker .checkbox.autofill{
@@ -256,6 +257,7 @@
 
 #ui-timepicker-div {
     z-index: 100000 !important;
+    margin-top: 3px;
 }
 
 .ui-timepicker-title{
