--- a/alpha/event/static/styles/tagspopup.css
+++ b/alpha/event/static/styles/tagspopup.css
@@ -62,3 +62,10 @@
     position:relative;
     z-index:3;
 }
+
+td .info-label {
+    margin-left:15px;
+    color: #06C;
+    font-size:0.9em;
+
+}
