UI fix + remove double email + add email on bad phrases catching

--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -348,8 +348,7 @@
                                                         <div class="close-button">Close</div>
                                                     </div>
                                                 </div>
-                                                {{form.tags}}
-                                                <span class='info-label'>Use "Tab" to add new tag</span>
+                                                {{form.tags}}                                                
                                             </td>
                                             <td class="tags_bottom">
                                                 <a href="#" class="balloon">
@@ -362,7 +361,7 @@
                                                     </h3>
                                                     <p>
                                                         <strong>e.g:</strong>
-                                                        &ldquo;Cat Empire&rdquo;  or &ldquo;Young Jeezy&rdquo;
+                                                        Use "Tab" to add new tag
                                                     </p>
                                                 </div>
 
@@ -383,7 +382,6 @@
                                                         <i>[tickets]:</i>
                                                     </h3>
                                                     <p>
-                                                        <strong>e.g:</strong>
                                                         &ldquo;Cat Empire&rdquo;  or &ldquo;Young Jeezy&rdquo;
                                                     </p>
                                                 </div>
@@ -392,8 +390,7 @@
                                         <tr class="picture">
                                             <td>Image</td>
                                             <td>
-                                                {{ form.picture_src }}
-                                                <span class='info-label'>You can download the picture no more than 32Mb</span>
+                                                {{ form.picture_src }}                                                
                                                 <div class='full-screen-popup' data-thumb-width="180" data-thumb-height="180">
                                                     {{ form.cropping }}
                                                     <div class='save-button'>Save image</div>
@@ -401,6 +398,21 @@
                                                 <div class="picture-thumb">
                                                     <img src="" class="preview"></div>
                                             </td>
+                                            <td>
+                                                <a href="#" class="balloon">
+                                                    <div class="buttonq"></div>
+                                                </a>
+                                                <div class="balloon-content">
+                                                    <h3>
+                                                        Help - Enter your
+                                                        <i>[picture]:</i>
+                                                    </h3>
+                                                    <p>                                                        
+                                                        You can upload the picture no more than 32Mb
+                                                    </p>
+                                                </div>
+                                            </td>
+
                                         </tr>
                                         <tr></tr>
                                         <tr>
